Updating pom.xml and added new coe